css/main.css
/*
red color: rgba(231, 76, 60,1.0);
red color: #e74c3c;
*/

/* ------------------------- */
/* BASIC SETUP */
/* ------------------------- */

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  background-color: #fff;
  color: #444;
  font-family: Avenir, Helvetica Neue, Arial Black, sans;
  font-size: 15px;
  font-weight: 500;
  text-rendering: optimizeLegibility;
  overflow-x: hidden;
}

section {
  margin: 2em 0;
}


/* ------------------------- */
/* REUSABLE COMPONENTS */
/* ------------------------- */


/* ----- HEADINGS ----- */

h1 {
  font-size: 300%;
  font-weight: 400;
  line-height: 120%;
  letter-spacing: 2px;
  text-align: center;
  text-rendering: optimizeLegibility;
}

/*h1:before {
  height: 2px;
  display: block;
  content: " ";
  margin: 0 auto;
  margin-top: .5em;
  background-color: #444;
  width: 50%;
}*/

h2 {
  font-size: 120%;
  font-weight: 400;
  letter-spacing: 1px;
  text-align: center;
  margin-bottom: 2em;
  text-rendering: optimizeLegibility;
}

h3 {
  font-size: 130%;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 1.1em;
  text-rendering: optimizeLegibility;
  /*text-align: center;*/
  /*margin-bottom: 2em;*/
}

h4 {
  font-size: 90%;
  font-weight: 400;
  letter-spacing: 1px;
  line-height: 1.1em;
  text-rendering: optimizeLegibility;
  /*text-align: center;*/
  /*margin-bottom: 2em;*/
}



/* ----- POSITIONERS ----- */

.positioner {
  max-width: 96%;
  margin: 0 auto;
}

/* ----- PARAGRAPHS ----- */



/* ----- HEART LOGO ----- */
.rbpr-heart-logo {
  background-image: url("../img/heart.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 10em;
  margin: 2em 0;
  /*background-color: #fbe5e2;*/
}


/* ----- BUTTONS ----- */

.contact-email:link {
  display: flex;
  margin: auto;
  width: 6em;
  height: 6em;
  line-height: 4em;
  border-radius:50%;
  color:#fff;
  font-weight: 600;
  letter-spacing: 1px;
  align-items: center;
  justify-content: center;
  text-decoration:none;
  /*background: rgba(231, 76, 60,1.0);*/
  background: #e74c3c;
  -webkit-transition: all 1s ease-in-out;
  -moz-transition: all 1s ease-in-out;
  -o-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
  border: 1px dotted transparent;
    
}

.contact-email:hover,
.contact-email:visited {
  color:#444;
  text-decoration:none;
  background:#fff;
  border: 1px dotted #f00;
}


/* ----- LINKS ----- */

a:link,
a:visited {
  /*padding: 8px 0px;*/
  color: #444;
  text-decoration: none;
  /*font-size: 140%;*/
  /*border-bottom: 2px solid transparent;*/
  -webkit-transition: border-bottom 0.2s;
  transition: border-bottom 0.2s;
}

a:hover,
a:active {
  background-color: #fbe5e2;
  transition: background-color .2s;
}


/* ----- ICONS ----- */



/* ------------------------- */
/* HEADER */
/* ------------------------- */

header {
  /*margin: 5em 0;*/
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* Sticky navigation */


.sticky-header-nav {
  position: fixed;
  display: flex;
  height: 3em;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  border-bottom: 1px solid #e7e7e7;
  justify-content: center;
  background-color: rgba(255, 255, 255, 0.98);
  box-shadow: 0 3px 2px #efefef;
  z-index: 9999;
}

.rbpr-nav-name {
  display: none;
  width: 8em;
  padding: .3em;
  text-align: center;
  /*margin: .5em 0 0 10.5em;*/
  /*background-color: #fbe5e2;*/
  /*border: 1px solid #000;*/
}

.sticky-header-nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  list-style: none;
}

/* 
don't mess with this on the links
as it gave me a better layout
than using display: block; (and with
greater ease)
*/
.sticky-header-nav ul li a {
  display: flex;
  justify-content: space-around;
  width: 5em;
  padding: 1em;
  /*text-align: center;*/
  /*border: 1px solid black;*/

}

/* ------------------------- */
/* MAIN NAVIGATION */
/* ------------------------- */

/* Main navigation */

.main-nav-container {
  display: flex;
  flex-flow: wrap row;
  list-style: none;
  justify-content: center;
  text-align: center;
  margin: 2em 0 5em 0;
}

.main-nav-container a {
  width: 10em;
  padding: 2em;
}

.main-nav-services {
  border-right: 2px solid #444;
  border-bottom: 2px solid #444;
}

.main-nav-press {
  border-bottom: 2px solid #444;
}

.main-nav-philosophy {
  border-right: 2px solid #444;
}



/* ------------------------- */
/* SERVICES */
/* ------------------------- */

.services-section {
  min-height: 100vh;
  display: flex;
  flex-flow: wrap column;
  align-items: center;
  justify-content: center;
  padding: 2em 0;
  margin-bottom: 0;
  background-image: url("../img/leather-nunchuck.png");
  background-repeat: repeat;
  background-attachment: fixed;
}

.services-section h1 {
  background-color: #fff9f4;
  padding: 0 1em;
  border: 1px solid #e7e7e7;
}

.services-section ul {
  list-style: circle outside;
  margin-left: 0;
  padding-left: 1em;
}

.services-section li {
  padding: .5em 0;
}

/* Style the buttons that are used to open and close the accordion panel */
button.services-accordion {
  background-color: #fffff4;
  font-size: 100%;
  color: #444;
  cursor: pointer;
  padding: 1em;
  padding-top: 1.3em;
  width: 80%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  border-bottom: 1px solid #e7e7e7;
  border-right: 1px solid #e7e7e7;
  border-left: 1px solid #e7e7e7;
}



/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
button.services-accordion.active,
button.services-accordion:hover {
  background-color: #fff9f4;
}

/* Add a symbol to each button to indicate whether the collapsible content is open or closed */
button.services-accordion:after {
    content: "\02795"; /* Unicode character for "plus" sign (+) */
    font-size: 1em;
    color: #777;
    float: right;
    margin-left: .5em;
}

button.services-accordion.active:after {
    content: "\2796"; /* Unicode character for "minus" sign (-) */
}

/* Style the accordion panel. Note: hidden by default */
div.panel {
    padding: 0 1em;
    background-color: rgba(255, 249, 244, 0.93);
    max-height: 0;
    width: 65%;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}



/* ------------------------- */
/* PRESS */
/* ------------------------- */

.press-section {
  width: 100%;
  min-height: 100vh;
  padding-top: 1em;
  padding-bottom: 4em;
  margin-top: 0;
  margin-bottom: 0;
  background-color: rgba(255, 178, 0, 0.8);
  background-image: url("../img/dark-mosaic.png");
  /*background-color: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), rgba(255, 178, 0, 0.98);*/
  /*background-color: #FFB200;*/
  /*border: 2px solid black;*/
}


.press-section h1 {
  background-color: #fff9f4;
  margin: 1em 0 0 0;
  width: auto;
  padding: .25em;
  border: 1px solid #e7e7e7;
}

.press-hit-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  /*border: 2px solid #000;*/
}

.press-hit-container li {
  height: 8em;
  width: 6em;
  flex-grow: 1;
  border: 1px solid #a9a9a9;
  overflow: hidden;
  background-color: #000;
}

.press-hit {
  width: 100%;
  margin: 0;
}

.press-hit img {
  opacity: 0.75;
  width: 100%;
  height: auto;
  transform: scale(1.05);
  /*transition: transform 0.1s, opacity 0.1s;*/
}

.press-hit img:hover {
  opacity: 1;
  transform: scale(1);
}



/* ------------------------- */
/* philosophy / PHILOSOPHY */
/* ------------------------- */

.philosophy-section {
  width: 100%;
  height: 100vh;
  /*height: 25em;*/
  overflow: hidden;
  margin: 0 auto;
  padding-bottom: 2em;
  background-image: url("../img/bright-squares.png");
  background-color: rgba(41, 128, 185, 0.98);
  /*background-color: #2980b9;*/

  /*background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), url("../img/congruent_pentagon.png");*/
}

.philosophy-section:before {
  
}

.philosophy-section h1 {
  background-color: #fff9f4;
  margin: 1.25em 0 .5em 0;
  width: auto;
  padding: .25em 0;
  border: 1px solid #e7e7e7;
}

.philosophy-section p {
  padding: 0 2.5em;
  line-height: 150%;
  font-size: 110%;
  font-weight: 200;
  text-align: justify-all;
  color: #e9e9e9;
}


/* ------------------------- */
/* CONTACT SECTION */
/* ------------------------- */

.contact-section {
    width: 100%;
    /*height: 500px;*/
    height: 100vh;
    margin: 0 auto;
    background-image: linear-gradient(rgba(231, 76, 60, 0.9), rgba(231, 76, 60, 0.8)), url("../img/magazines.jpg");
    /*background-image: linear-gradient(rgba(231, 76, 60, 0.9), rgba(255, 255, 255, 0.98)), url("../img/magazines.jpg");*/
    /*background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), url("../img/magazines.jpg");*/
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    display: flex;
    align-items: center;
}


/*.contact-section h1 {*/
.contact-section h2 {
  font-size: 300%;
  font-weight: 300;
  color: #fff;
  padding: 1em 0;
  margin-bottom: 0;
}

.social-icons-container {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  margin: 0 auto;
}

.social-icons-container ul {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  /*justify-content: space-between;*/
  border: 2px solid #fff;
  border-radius: 5px;
  width: 80%;
  height: 100%;
}

.social-icons-container li {
  margin: .75em;
  height: 2.5em;
  width: 2.5em;
  /*border: 2px solid yellow;*/
}



/* Social media links 

.contact-section a:link,
.contact-section a:visited {
  color: #fff;
  text-decoration: none;
}

/* there is no hover on mobile so
 move this to a higher media query */
.contact-section a:hover,
.contact-section a:active {
  background-color: transparent;
  border-bottom: 2px solid #fff;
}

/* ------------------------- */
/* FOOTER */
/* ------------------------- */


/* ------------------------- */
/* Animations */
/* ------------------------- */



/* ----- A nice gradient called Kyoto from uigradients.com ----- */

.a-nice-gradient {
  background: #c21500; /* fallback for old browsers */
  background: -webkit-linear-gradient(to left, #c21500 , #ffc500); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to left, #c21500 , #ffc500); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

